Prevent affixed object sticking on tablets and smaller

--- a/jerix.co.uk/core_static/css/_tablet.scss
+++ b/jerix.co.uk/core_static/css/_tablet.scss
@@ -11,4 +11,8 @@
         margin-right: -20px;
         margin-left:  -20px;
     }
+    .affix {
+        top:0px;
+        position: relative;
+    }
 }
